# Auditable-Coarse-to-Fine-Quotient-Planning

./: .gitignore  DECISION_LEDGER.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
scripts/: __init__.py  build_reference_manifest.py  check_legacy_gate.py  fetch_references.py  verify_aliased_cegar.py  verify_d4_baseline.py  verify_phase05.py  verify_phase3a.py  verify_phase3b.py  verify_phase3c.py  verify_phase3d.py
specs/: ARTIFACT_SCHEMAS.md  AUDIT_LADDER.md  BENCHMARK_GRAMMAR.md  CERTIFICATE_MEMOIZATION.md  CROSS_QUERY_PROMOTION.md  EXPERIMENT_MATRIX.md  FORMAL_OBJECTS.md  H2_TEMPORAL_PROOF_DAG.md  HELDOUT_FAMILY_AMORTIZATION.md  INCREMENTAL_PROOF_DAG.md  LIVE_QUERY_LOCAL_EPOCH_INVALIDATION.md  MILESTONES_AND_GATES.md  MULTISTEP_QUERY_LOCAL_REFINEMENT.md  OBSERVED_TYPED_COORDINATE_SYNTHESIS.md  PHASE3E_PRECONSTRUCTION.md  PHASE3E_PRECONSTRUCTION_LIMITATIONS.md  QUERY_LOCAL_EVIDENCE_REFINEMENT.md  REPRODUCIBILITY.md  RESEARCH_CONTRACT.md  SAMPLE_EFFICIENCY_PROTOCOL.md  SOFTWARE_INTERFACES.md
tests/: phase3e_route_guard_cases.py  test_access_protocol_v1.py  test_accounting_v1.py  test_actual_accounting_v1.py  test_aliased_safe_chain.py  test_artifacts.py  test_behavioral_oracle.py  test_build_coverage.py  test_campaign_v1.py  test_certificate_memoization_v1.py  test_cross_query_promotion_v1.py  test_d4_baseline.py  test_d4_quotient.py  test_direct_feature_synthesis.py  test_domains.py  test_feature_synthesis.py  test_frozen_phase3c.py  test_frozen_upper_audit.py  test_general_local_recovery.py  test_general_local_solver.py  test_heldout_family_amortization_v1.py  (+73 more)
(+120 files in other folders)
